responsive img covering and issue banner fix

--- a/scss/components/_soe_dm_issue.scss
+++ b/scss/components/_soe_dm_issue.scss
@@ -17,6 +17,9 @@
         object-position: center center;
         width: 100%;
         height: calc(100vh - 180px);
+        @include breakpoint-max(large) {
+          height: calc(100vh - 233px);
+        }
         @include breakpoint-max(medium) {
           height: auto;
         }
@@ -33,6 +36,10 @@
         text-align: center;
         width: 100%;
         z-index: 1;
+        @include breakpoint-max(medium) {
+          color: $primary-color;
+          position: static;
+        }
 
         h1 {
           color: $white;
@@ -43,6 +50,8 @@
           background: rgba(0, 0, 0, 0.3);
           @include breakpoint-max(small) {
             display: block;
+            background: rgba(0, 0, 0, 0.7);
+            margin-top: 0;
           }
 
           &.mag-issue-color-orange {
@@ -76,6 +85,10 @@
         height: 100%;
         width: 100%;
         @include gradient-vertical($end-color: rgba(0, 0, 0, 0.75));
+        @include breakpoint-max(small) {
+          content: url("../img/soe_chevron_down_black.png");
+          bottom: -25px;
+        }
       }
     }
 
@@ -735,6 +748,9 @@
         height: 100%;
         width: 100%;
         @include gradient-vertical($end-color: rgba(0, 0, 0, 0.75));
+        @include breakpoint-max(small) {
+          background: none;
+        }
       }
     }
   }
